--- a/styles/index.css
+++ b/styles/index.css
@@ -23,7 +23,7 @@
 .homepage {
     height: 100vh;
     width: 100%;
-    background-image: url('/images/slider-1.jpg');
+    background-image: url('../images/slider-1.jpg');
     background-size: 100%;
     background-repeat: no-repeat;
     background-position: center;
