--- a/styles/blog.css
+++ b/styles/blog.css
@@ -290,7 +290,7 @@ li #blog {
 .intro {
     width: 100%;
     height: 100vh;
-    background-image: url(/images/review-bg.jpg);
+    background-image: url('../images/review-bg.jpg');
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
