--- a/styles/contact.css
+++ b/styles/contact.css
@@ -276,7 +276,7 @@ li #contact {
 .intro {
     width: 100%;
     height: 100vh;
-    background-image: url(/images/review-bg.jpg);
+    background-image: url('../images/review-bg.jpg');
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
