--- a/styles/index.css
+++ b/styles/index.css
@@ -241,7 +241,7 @@ h1 {
 .banner {
     height: 70vh;
     width: 100%;
-    background-image: url(/images/banner-bg.jpg);
+    background-image: url('../images/banner-bg.jpg');
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
@@ -484,7 +484,7 @@ h3 {
 .intro {
     width: 100%;
     height: 100vh;
-    background-image: url(/images/review-bg.jpg);
+    background-image: url('../images/review-bg.jpg');
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
