--- a/styles/menu.css
+++ b/styles/menu.css
@@ -313,7 +313,7 @@ h3 {
 .intro {
     width: 100%;
     height: 100vh;
-    background-image: url(/images/review-bg.jpg);
+    background-image: url('../images/review-bg.jpg');
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
